@@ -7,6 +7,10 @@ from distutils.sysconfig import get_python_inc
 configcommand = os.environ.get('SDL_CONFIG', 'sdl-config',)
 configcommand = configcommand + ' --version --cflags --libs'
 localbase = os.environ.get('LOCALBASE', '') #do we still need this?
+incdirs.append("/usr/include")
+incdirs.append("/include")
+libdirs.append("/usr/lib")
+libdirs.append("/lib")
 
 
 
