@@ -253,8 +253,6 @@ typedef struct {
 	PyObject_HEAD
 	SDL_Surface* surf;
 	struct SubSurface_Data* subsurface;  /*ptr to subsurface data (if a subsurface)*/
-	int lockcount;
-	int didlock;
         PyObject* weakreflist;
 } PySurfaceObject;
 #define PySurface_AsSurface(x) (((PySurfaceObject*)x)->surf)
